# tap-instagram

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml  tagged_release_workflow.yml
tap_instagram/: client.py  streams.py  tap.py
tap_instagram/tests/: __init__.py  test_core.py
